--- a/GeoQuizChallenge/app/src/main/res/values/strings.xml
+++ b/GeoQuizChallenge/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="question_button_true">true</string>
     <string name="question_text">Canberra is the capital of Australia.</string>
     <string name="question_button_false">false</string>
-    <string name="coorect_toast">Correct!</string>
+    <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
 </resources>
