--- a/GeoQuizChallenge/app/src/main/res/values/strings.xml
+++ b/GeoQuizChallenge/app/src/main/res/values/strings.xml
@@ -6,10 +6,10 @@
     <string name="question_africa">The source of the Nile River is in Egypt</string>
     <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
     <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
-    <string name="question_button_true">true</string>
-    <string name="question_button_false">false</string>
+    <string name="button_true">true</string>
+    <string name="button_false">false</string>
     <string name="prev_button">Prev</string>
     <string name="next_button">Next</string>
-    <string name="correct_toast">Correct!</string>
-    <string name="incorrect_toast">Incorrect!</string>
+    <string name="correct">Correct</string>
+    <string name="incorrect">Incorrect</string>
 </resources>
