--- a/GeoQuizChallenge/app/src/main/res/values/strings.xml
+++ b/GeoQuizChallenge/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="next_button">Next</string>
     <string name="correct">Correct</string>
     <string name="incorrect">Incorrect</string>
+    <string name="percentage_score">Percentage score is: </string>
 </resources>
