--- a/GeoQuizChallenge/app/src/main/res/values/strings.xml
+++ b/GeoQuizChallenge/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="correct">Correct</string>
     <string name="incorrect">Incorrect</string>
     <string name="percentage_score">Percentage score is: </string>
+    <string name="warning_text">Are you sure you want to do this? </string>
+    <string name="show_answer_button">Show answer</string>
+    <string name="cheat_button">Cheat</string>
+    <string name="judgment_toast">Cheating is wrong.</string>
 </resources>
